2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/openvas_logging.h, misc/openvas_logging.c: Moved struct
	openvas_logging_t from header to implementation file.

2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Removed base/openvas_certificate module, replaced by base/certificate.

	* base/openvas_certificate.c, base/openvas_certificate.h: Removed.

	* Makefile: Do not install openvas_certificate header anymore.

	* base/CMakeLists.txt: Removed openvas_certificate from files list.

	* nasl/CMakeLists.txt: Added base as include dir; libopenvas_nasl
	depends on libopenvas_base.

	* nasl/nasl.h, nasl/nasl_signature.h: Removed definition of struct
	openvas_certificate and related functions.

	* nasl/nasl_signature.c: Adjusted include
	(openvas_certificate_free, openvas_certificate_new): removed (former
	duplicates)
	(nasl_get_pubkey): Switch from emalloc to g_malloc.
	(nasl_get_all_certificates): Switch from openvas_certificate to
	certificate_t.

2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* base/openvas_certificate_file.c (add_cert_to_file,
	openvas_certificate_file_read): Cleaned up includes, switch from
	openvas_certificate to certificate_t implementation.

	* base/openvas_certificate_file.h: Removed unneeded include, adjusted
	doc.

2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* base/certificate.c: Added todo regarding the set_* methods.
	(certificate_create_full): New, creates a certificate_t with values.

	* base/certificate.h (struct certificate_t): Changed types from char to
	gchar (are freed with g_free).
	(certificate_create_full): Added proto.

2009-09-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* Makefile (distclean): Also remove the libopenvas.pc file.

2009-09-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/openvas_logging.c, misc/openvas_logging.h: Renamed
	openvasd_logging struct to openvas_logging_t.
